slightly lower performance mobilenet

--- a/model-attempts/mobile_net_4.ipynb
+++ b/model-attempts/mobile_net_4.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,6 +72,8 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.applications import MobileNetV2\n",
+    "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
     "from tensorflow import keras\n",
     "\n",
     "\n",
@@ -95,14 +97,14 @@
     "\n",
     "def create_generators(train_df, val_df, test_df):\n",
     "    train_datagen = ImageDataGenerator(\n",
-    "    rescale=1./255,\n",
+    "    preprocessing_function=preprocess_input,\n",
     "    rotation_range=10,\n",
     "    width_shift_range=0.05,\n",
     "    height_shift_range=0.05,\n",
     "    zoom_range=0.1,\n",
     "    horizontal_flip=True\n",
     "    )\n",
-    "    test_val_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "    test_val_datagen = ImageDataGenerator(preprocessing_function=preprocess_input)\n",
     "\n",
     "    train_generator = train_datagen.flow_from_dataframe(\n",
     "        dataframe=train_df,\n",
@@ -139,18 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-03 14:06:26.329325: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M4\n",
-      "2025-12-03 14:06:26.329626: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 16.00 GB\n",
-      "2025-12-03 14:06:26.329643: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 5.33 GB\n",
-      "2025-12-03 14:06:26.329845: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2025-12-03 14:06:26.329863: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+      "2025-12-04 17:19:07.438767: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M4\n",
+      "2025-12-04 17:19:07.438950: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 16.00 GB\n",
+      "2025-12-04 17:19:07.438961: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 5.33 GB\n",
+      "2025-12-04 17:19:07.439150: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2025-12-04 17:19:07.439166: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     },
     {
@@ -164,37 +166,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-03 14:06:28.857392: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:117] Plugin optimizer for device_type GPU is enabled.\n"
+      "2025-12-04 17:19:10.278904: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:117] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m401s\u001b[0m 197ms/step - accuracy: 0.8350 - loss: 0.4128 - val_accuracy: 0.9350 - val_loss: 0.1865\n",
+      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m489s\u001b[0m 241ms/step - accuracy: 0.8477 - loss: 0.3759 - val_accuracy: 0.8996 - val_loss: 0.2803\n",
       "Epoch 2/10\n",
-      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m405s\u001b[0m 203ms/step - accuracy: 0.9219 - loss: 0.2217 - val_accuracy: 0.9525 - val_loss: 0.1431\n",
+      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m477s\u001b[0m 238ms/step - accuracy: 0.9366 - loss: 0.1849 - val_accuracy: 0.9615 - val_loss: 0.1219\n",
       "Epoch 3/10\n",
-      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m418s\u001b[0m 209ms/step - accuracy: 0.9416 - loss: 0.1714 - val_accuracy: 0.9623 - val_loss: 0.1223\n",
+      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m471s\u001b[0m 235ms/step - accuracy: 0.9550 - loss: 0.1395 - val_accuracy: 0.9675 - val_loss: 0.1095\n",
       "Epoch 4/10\n",
-      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m398s\u001b[0m 199ms/step - accuracy: 0.9509 - loss: 0.1484 - val_accuracy: 0.9548 - val_loss: 0.1398\n",
+      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m885s\u001b[0m 442ms/step - accuracy: 0.9644 - loss: 0.1158 - val_accuracy: 0.9684 - val_loss: 0.1075\n",
       "Epoch 5/10\n",
-      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m400s\u001b[0m 200ms/step - accuracy: 0.9593 - loss: 0.1259 - val_accuracy: 0.9572 - val_loss: 0.1365\n",
+      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m465s\u001b[0m 233ms/step - accuracy: 0.9703 - loss: 0.1003 - val_accuracy: 0.9664 - val_loss: 0.1155\n",
       "Epoch 6/10\n",
-      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m396s\u001b[0m 198ms/step - accuracy: 0.9640 - loss: 0.1151 - val_accuracy: 0.9717 - val_loss: 0.0992\n",
+      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m466s\u001b[0m 233ms/step - accuracy: 0.9742 - loss: 0.0899 - val_accuracy: 0.9795 - val_loss: 0.0792\n",
       "Epoch 7/10\n",
-      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m419s\u001b[0m 210ms/step - accuracy: 0.9682 - loss: 0.1050 - val_accuracy: 0.9645 - val_loss: 0.1205\n",
+      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m463s\u001b[0m 232ms/step - accuracy: 0.9774 - loss: 0.0815 - val_accuracy: 0.9792 - val_loss: 0.0771\n",
       "Epoch 8/10\n",
-      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m414s\u001b[0m 207ms/step - accuracy: 0.9719 - loss: 0.0960 - val_accuracy: 0.9683 - val_loss: 0.1077\n",
+      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m464s\u001b[0m 232ms/step - accuracy: 0.9811 - loss: 0.0714 - val_accuracy: 0.9740 - val_loss: 0.0965\n",
       "Epoch 9/10\n",
-      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m398s\u001b[0m 199ms/step - accuracy: 0.9742 - loss: 0.0887 - val_accuracy: 0.9760 - val_loss: 0.0903\n",
+      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m467s\u001b[0m 234ms/step - accuracy: 0.9834 - loss: 0.0665 - val_accuracy: 0.9819 - val_loss: 0.0712\n",
       "Epoch 10/10\n",
-      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m404s\u001b[0m 202ms/step - accuracy: 0.9758 - loss: 0.0840 - val_accuracy: 0.9745 - val_loss: 0.0951\n"
+      "\u001b[1m1999/1999\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m462s\u001b[0m 231ms/step - accuracy: 0.9855 - loss: 0.0621 - val_accuracy: 0.9710 - val_loss: 0.1026\n"
      ]
     }
    ],
    "source": [
-    "from tensorflow.keras.applications import MobileNetV2\n",
     "from tensorflow.keras import regularizers\n",
     "from tensorflow.keras import layers, models, optimizers\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
@@ -206,7 +207,7 @@
     ")\n",
     "base_model.trainable = True \n",
     "\n",
-    "for layer in base_model.layers[:-40]:  \n",
+    "for layer in base_model.layers[:-60]:  \n",
     "    layer.trainable = False\n",
     "\n",
     "model = models.Sequential([\n",
@@ -235,15 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial validation loss 0.0950523167848587\n",
-      "Initial validation accuracy 0.9744840264320374\n"
+      "Initial validation loss 0.10255365073680878\n",
+      "Initial validation accuracy 0.9709818363189697\n"
      ]
     }
    ],
